--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -25,7 +25,7 @@
                 <img src="{{ AA.image.url }}" class="post-image" alt="">
                 <div class="post-content">
                     <div class="reaction-wrapper">
-                        <img src="{% static 'img/icone/icons8-speech-bubble-26.png' %}" class="icon" alt="">
+                        <a href="{% url 'post-detail' AA.pk %}"><img src="{% static 'img/icone/icons8-speech-bubble-26.png' %}" class="icon" alt=""></a>
                         <img src="{% static 'img/icone/icons8-email-send-26.png' %}" class="icon" alt="">
                         <img src="{% static 'img/icone/icons8-bookmark-26.png' %}" class="save icon" alt="">
                     </div>
@@ -82,12 +82,12 @@
                     <p class="post-time">{{ AA.created }}</p>
                 </div>
                 <div class="comment-wrapper">
-                    <img src="img/smile.PNG" class="icon" alt="">
-                    <form method="post">
-                        {% csrf_token %}
-                        {{comment_form.as_p}}
-                        <button class="comment-btn">post</button>
-                    </form>
+{#                    <img src="img/smile.PNG" class="icon" alt="">#}
+{#                    <form method="post">#}
+{#                        {% csrf_token %}#}
+{#                        {{comments.as_p}}#}
+{#                        <button class="comment-btn">post</button>#}
+{#                    </form>#}
                 </div>
             </div>
             {% endfor %}
