Add follow unfollow system

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -507,7 +507,7 @@ body{
     border: 0.1rem solid #dbdbdb;
     border-radius: 0.3rem;
     padding: 0 2.4rem;
-    margin-left: 2rem;
+    margin-left: 0;
 }
 
 .profile-settings-btn {
