--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -1,29 +1,36 @@
 {% extends 'header.html' %}
 {% load static %}
 {% block content %}
-{#    <div>#}
-{#        <h2>Hi {{ user.username }}</h2>#}
-{#        <h3><a href="{% url 'password_change' %}">Change password</a></h3>#}
-{#        <h3><a href="{% url 'edit' %}">edit profile</a></h3>#}
-{#    </div>#}
 
-<header>
+    <header>
 
 	<div class="container">
 
 		<div class="profile">
 
 			<div class="profile-image">
-                {% if user.profile.photo.url == user.profile.photo.url %}
-				<img src="{{ user.profile.photo.url }}" alt="">
+                {% if objectg.photo.url == objectg.photo.url %}
+				<img src="{{ object.photo.url }}" alt="">
                 {% endif %}
 			</div>
 
 			<div class="profile-user-settings">
 
-				<h1 class="profile-user-name">{{ user.username }}</h1>
+				<h1 class="profile-user-name">{{ object }}</h1>
+                {% if follow %}
+                    <form action="{% url 'switch_follow_unfollow' %}" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="profile_pk" value="{{ object.pk }}">
+                        <button type="submit" class="btn profile-edit-btn">unfollow</button>
+                    </form>
+                    {% else %}
+                    <form action="{% url 'switch_follow_unfollow' %}" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="profile_pk" value="{{ object.pk }}">
+                        <button type="submit" class="btn profile-edit-btn">follow</button>
+                    </form>
+                {% endif %}
 
-				<button class="btn profile-edit-btn"><a href="{% url 'edit' %}">Edit Profile</a></button>
 
 				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
 
@@ -32,16 +39,16 @@
 			<div class="profile-stats">
 
 				<ul>
-					<li><span class="profile-stat-count">{{ post.count }}</span> posts</li>
+					<li><span class="profile-stat-count">{{ post_user.count }}</span> posts</li>
 					<li><span class="profile-stat-count">0</span> followers</li>
-					<li><span class="profile-stat-count">{{ user.profile.following.count }}</span> following</li>
+					<li><span class="profile-stat-count">{{ object.following.count }}</span> following</li>
 				</ul>
 
 			</div>
 
 			<div class="profile-bio">
 
-				<p><span class="profile-real-name"></span>{{ user.profile.bio }}</p>
+				<p><span class="profile-real-name"></span>{{ object.bio }}</p>
 
 			</div>
 
@@ -84,4 +91,6 @@
 	<!-- End of container -->
 
 </main>
-{% endblock %}
+
+
+{% endblock content %}
