Update follow unfollow system

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -14,7 +14,7 @@
                 <div class="info">
                     <div class="user">
                         <div class="profile-pic">
-                        {% for profile_image in AA.profile_image.all %}
+                        {% for profile_image in AA.images_created %}
                         <img src="{{ im.profile_image.url }}" alt="">
                         {% endfor %}
                         </div>
