--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -33,7 +33,7 @@
 
 				<ul>
 					<li><span class="profile-stat-count">{{ post.count }}</span> posts</li>
-					<li><span class="profile-stat-count">0</span> followers</li>
+					<li><span class="profile-stat-count">{{ user.followers.count }}</span> followers</li>
 					<li><span class="profile-stat-count">{{ user.profile.following.count }}</span> following</li>
 				</ul>
 
