--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/semantic.min.css' %}">
 </head>
 <body>
     <nav class="navbar">
@@ -47,7 +48,8 @@
         {% block content %}
 
     {% endblock content %}
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="{% static 'css/semantic.min.js' %}"></script>
 <script>
 // Get the modal
 var modal = document.getElementById("myModal");
