--- a/templates/post/creat_post.html
+++ b/templates/post/creat_post.html
@@ -1,11 +1,20 @@
 {% extends 'header.html' %}
 {% block title %}Bookmark an image{% endblock %}
 {% block content %}
-     <h1>Bookmark an image</h1>
-     <img src="{{ request.GET.url }}" class="image-preview">
+     <img src="{{ request.GET.url }}" class="image-preview" alt="">
      <form method="post" enctype="multipart/form-data">
-     {{ form.as_p }}
+    <div class="ui card" style="margin: auto;">
+        <div class="content">
+            <div class="header">
+                    {{ form.image }}
+                </div><br>
+                <div class="meta">
+                  {{ form.description }}
+                </div>
+                <input type="submit" class="ui primary button" value="share">
+                <br>
+            </div>
+        </div>
      {% csrf_token %}
-     <input type="submit" value="Bookmark it!">
      </form>
 {% endblock %}
