--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,7 +79,7 @@ body{
     padding: 40px 0;
     display: flex;
     justify-content: center;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .wrapper{
@@ -95,14 +95,21 @@ body{
     flex-direction: column;
 }
 
+.f_name{
+    border: 1px solid #b5b5b5;
+    width: 213px;
+    height: 26px;
+    margin: 0 60px;
+    border-radius: 3px;
+}
+
 .status-wrapper{
     width: 100%;
     height: 120px;
     background: #fff;
     border: 1px solid #dfdfdf;
     border-radius: 2px;
-    padding: 10px;
-    padding-right: 0;
+    padding: 10px 0 10px 10px;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -238,6 +245,17 @@ body{
 .comment-wrapper .icon{
     height: 30px;
 
+}
+
+.edit-p{
+    display: block;
+    text-align: center;
+    background: white;
+    width: 50%;
+    margin: 67px auto auto;
+    border: 1px solid #d4d4d4;
+    border-radius: 5px;
+    padding: 27px;
 }
 
 .comment-box{
@@ -513,6 +531,7 @@ body{
     display: inline-block;
     font-size: 2.2rem;
     font-weight: 300;
+    margin-right: 30px;
 }
 
 .profile-edit-btn {
